# IsopGem

./: .cursorignore  .cursorrules  .gitignore  .sophia_learning.jsonl  DEPLOYMENT.md  DEVELOPMENT.md  GEOMETRY_DOCS_STATUS.md  IsopGem.sln  LATEX_VISUAL_EDITOR_MYTHIC.md  LICENSE  MERMAID_API_GUIDE.md  MERMAID_COMPLETE_SUMMARY.md  MERMAID_ENHANCEMENTS_SUMMARY.md  MERMAID_ER_BUILDER_COMPLETE.md  MERMAID_VISUAL_BUILDER_GUIDE.md  NEW_GEMINI_CONTENT.md  README.md  __main__.py  amun_ditrunes.csv  calc_drift.py  debug_button_styles.py  debug_natal_fix.py  debug_rose_calibration.py  find_faces.py  isopgem.db  isopgem.db-shm  isopgem.db-wal  main.py  main_window.py  pip.sh  pyproject.toml  pyrightconfig.balanced.json  pyrightconfig.json  pytest.ini  reproduce_export_crash.py  requirements-backup.txt  requirements.txt  run.sh  setup_env.sh  temp_adyton.txt  (+6 more)
.githooks/: pre-commit
.github/: copilot-instructions.md
.sophia_witness/: 24ba0ab37929.json  index.json
Docs/: CYMATICS_GENERATOR_HELP.md  ETYMOLOGY_SUMMARY.md  Expansion.md  Gematria_Methods (1).md  HOLY_BOOK_TEACHER_HELP.md  LATEX_VISUAL_EDITOR_COMPLETE.md  PYLANCE_AND_ARCHITECTURE.md  Spreadsheet_Feature_Roadmap.md  The Chamber of the Adepts and the Adyton. FINAL.docx  The_Adyton_Grimoire.md  The_Greek_Keys.md  mindscape_audit.md  source_documentation.md
IsopGem/: IsopGem.pyproj
anamnesis/: .session_lock  DREAMS.md  NOTES_FOR_NEXT_SESSION.md  SOUL_DIARY.md
config/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.txt  UI_ARCHITECTURE.md
core/: __init__.py
data/: 97_tones_of_amun.csv  amun_sound_map.csv
docs/: README.md  (+18 more)
(+1731 files in other folders)
